// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BreadcrumbNav > does not display address hover for native tokens 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      aria-current="page"
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-6px"
      data-testid="current-breadcrumb"
    >
      <h1
        class="font_body _display-inline _boxSizing-border-box _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-inherit _fontWeight-inherit _lineHeight-inherit _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px"
        data-disable-theme="true"
      >
        ETH
      </h1>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`BreadcrumbNav > renders hover components correctly 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      aria-current="page"
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-6px"
      data-testid="current-breadcrumb"
    >
      <h1
        class="font_body _display-inline _boxSizing-border-box _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-inherit _fontWeight-inherit _lineHeight-inherit _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px"
        data-disable-theme="true"
      >
        WBTC
      </h1>
      <div
        class="is_TouchableArea  t_group_true"
        role="button"
        style="display: flex; flex-basis: auto; box-sizing: border-box; min-height: 0px; min-width: 0px; flex-shrink: 0; border-top-left-radius: var(--t-radius-rounded12); border-top-right-radius: var(--t-radius-rounded12); border-bottom-right-radius: var(--t-radius-rounded12); border-bottom-left-radius: var(--t-radius-rounded12); cursor: pointer; flex-direction: row; outline-color: rgba(0, 0, 0, 0); opacity: 1; pointer-events: auto; gap: 4px; align-items: center; position: relative; transform: scale(1);"
        tabindex="0"
      >
        <div
          class="_maxWidth-_platformweb_calc100-0px38074892 _whiteSpace-_platformweb_nowrap _overflowX-_platformweb_hidden _overflowY-_platformweb_hidden _textOverflow-_platformweb_ellipsis _color-_grouptrue-hover_accent3Hove112785 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _color-accent3"
        >
          <span
            class="font_body _whiteSpace-_platformweb_nowrap _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh507465454"
            data-disable-theme="true"
          >
            0x2260...C599
          </span>
        </div>
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative _width-16px _height-16px"
        />
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
